--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "cara",
-  "description": "Playful and Colorful One-Page portfolio featuring Parallax effects and animations",
+  "description": "Landing Pad",
   "version": "0.2.11",
   "author": "LekoArts <hello@lekoarts.de>",
   "license": "0BSD",
